# genpoly-spg

./: .gitignore  CMakeLists.txt  Makefile  README.md  generator_overview
Thesis_PM/: ideas_for_evaluation.txt
Thesis_PM/Figures/: inflate_cut  inflate_grid_mapping  inflate_step  visibility_region
Thesis_PM/Image_Source/: Connection_convex_layers.ipe  arrangement_with_kernels.ipe  grp_ch_crash.ipe  inflate_cut.ipe  inflate_grid_mapping.ipe  inflate_step.ipe  simplicity_checking1.ipe  starshaped_blue_kernel.ipe  starshaped_green_kernel.ipe  starshaped_red_kernel.ipe  starshaped_yellow_kernel.ipe  visibility_region.ipe
pm/: Makefile
pm/ideas/: ImprovingRandomness.txt  TriangulationSimplicityChecker.txt  kineticTriangulation.txt  rough_fine_structure.txt
pm/includes/: initialPolygonGenerator.h  polygonTransformer.h  polygonTransformer.h~
pm/src/: initialPolygonGenerator.cpp  main.cpp  main.cpp~  polygonTransformer.cpp  polygonTransformer.cpp~
sj/: .gitignore  CMakeLists.txt  Makefile  app_conflict-20190419-205535  core  out_conflict-20190510-123257.p10  sm  small.pnt  temp.pnt  temp.prm
sj/includes/: allsp.h  basicFunctions.h  curve.h  edge.h  heap.h  hole.h  inits.h  io.h  opt2.h  opt2a.h  opt2b.h  opt2base.h  opt2c.h  opt2d.h  opt2e.h  opt2f.h  opt2g.h  opt2h.h  pol.h  polygon.h  star.h  statistic.h
sj/src/: allsp.cpp  basicFunctions.cpp  curve.cpp  edge.cpp  heap.cpp  hole.cpp  inits.cpp  io.cpp  main.cpp  opt2.cpp  opt2a.cpp  opt2b.cpp  opt2base.cpp  opt2c.cpp  opt2d.cpp  opt2e.cpp  opt2f.cpp  opt2g.cpp  opt2h.cpp  pol.cpp  polygon.cpp  star.cpp  statistic.cpp  test.cpp
src/: CMakeLists.txt  basicDefinitions.h  inits.cpp  inits.h  io.cpp  io.h  main.cpp  points.h
test/: CMakeCache.txt  Makefile  cmake_install.cmake  spg
test/sj/: Makefile  cmake_install.cmake
test/util/: Makefile  cmake_install.cmake
testdata/: points-20.pnts  points-40.pnts  points-60.pnts  randomize_pnts.py
triangulation_approach/: Makefile  crashing_seeds.txt  default.fpg  gnuplot_config  ideas_for_evaluation.txt  test_script
triangulation_approach/includes/: .nfs00000001d0b48dc70000000c  customPriorityQueue.h  eventQueue.h  initialPolygonGenerator.h  insertion.h  polygonTransformer.h  predicates.h  settings.h  statistics.h  tedge.h  tpolygon.h  translation.h  triangle.h  triangulation.h  vertex.h
triangulation_approach/src/: eventQueue.cpp  initialPolygonGenerator.cpp  insertion.cpp  main.cpp  polygonTransformer.cpp  predicates.cpp  settings.cpp  statistics.cpp  tedge.cpp  tpolygon.cpp  translation.cpp  triangle.cpp  triangulation.cpp  vertex.cpp
util/: CMakeLists.txt
util/includes/: IOtools.h  basicDefinitions.h  basicFunctions.h  bst.h  edge.h  elapsed.h  point.h  points.h  pol.h  polygon.h  rand.h  random.h  randomGenerator.h  randomGenerator.h~  randomNumberTools.h~  simple_pol_check.h  statistics.h  timer.h
util/src/: IOtools.cpp  basicFunctions.cpp  bst.cpp  edge.cpp  elapsed.cpp  point.cpp  points.cpp  pol.cpp  predicates.cpp  randomGenerator.cpp~  simple_pol_check.cpp  statistics.cpp
